--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
