--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/system": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "html-react-parser": "^5.1.10",
+    "install": "^0.13.0",
     "moment": "^2.30.1",
+    "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
